--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
+    "postinstall": "tsc",
+    "start": "node ./build/index.js",
     "test": "jest"
   },
   "keywords": [],
@@ -27,5 +29,8 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
-  }
+  },
+   "engines": {
+    "node": "16.x"
+   }
 }
