--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "postinstall": "tsc",
-    "start": "node ./build/index.js",
+    "production": "node ./build/index.js",
     "test": "jest"
   },
   "keywords": [],
