--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "postinstall": "tsc",
-    "production": "node ./build/index.js",
+    "build": "tsc",
+    "start": "node ./build/index.js",
     "test": "jest"
   },
   "keywords": [],
